# Research_Assistant_Crew_AI

./: README.md
research_assistant_for_phd_scholars/: README.md  pyproject.toml  report.md
research_assistant_for_phd_scholars/src/research_assistant_for_phd_scholars/: app.py  crew.py  index.html  main.py  report.md  requirements.txt  script.js  style.css
research_assistant_for_phd_scholars/src/research_assistant_for_phd_scholars/static/: script.js  style.css
research_assistant_for_phd_scholars/src/research_assistant_for_phd_scholars/templates/: index.html
