[project]
name = "research_assistant_for_phd_scholars"
version = "0.1.0"
description = "research-assistant-for-phd-scholars using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
research_assistant_for_phd_scholars = "research_assistant_for_phd_scholars.main:run"
run_crew = "research_assistant_for_phd_scholars.main:run"
train = "research_assistant_for_phd_scholars.main:train"
replay = "research_assistant_for_phd_scholars.main:replay"
test = "research_assistant_for_phd_scholars.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
